--- a/tests/ok_std/Cargo.toml
+++ b/tests/ok_std/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "with_std"
+name = "ok_std"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-abstra = { path = "../.." }
+ranging = { path = "../.." }
