--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [features]
 std = []
 no_std = []
-
+# only for testing:
+default = ["std"]
 [dependencies]
 
 # Do not have a test-based workspace. It upset both
