--- a/tests/ok_std/Cargo.toml
+++ b/tests/ok_std/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 ranging = { path = "../..", features = ["std"] }
+[dev-dependencies]
+any_std = { path = "../any_std" }
