--- a/tests/no_std_compile/Cargo.toml
+++ b/tests/no_std_compile/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "no_std"
+name = "no_std_compile"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,4 +7,9 @@ edition = "2021"
 
 [dependencies]
 ranging = { path = "../..", features = ["no_std"]}
-any_std = { path = "../any_std" }
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
