--- a/tests/no_std_basic_emulate/Cargo.toml
+++ b/tests/no_std_basic_emulate/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "no_std_compile"
+name = "no_std_basic_emulate"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,9 +7,4 @@ edition = "2021"
 
 [dependencies]
 ranging = { path = "../..", features = ["no_std"]}
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+any_std = { path = "../any_std" }
