--- a/tests/any_std/Cargo.toml
+++ b/tests/any_std/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+no_std = []
+
 [dependencies]
 ranging = { path = "../.." }
