--- a/tests/no_std_basic_compile/Cargo.toml
+++ b/tests/no_std_basic_compile/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ranging = { path = "../..", features = ["no_std"]}
+any_std = { path = "../any_std", features = ["no_std"] }
 
 [profile.dev]
 panic = "abort"
