--- a/tests/no_std_basic_emulate/Cargo.toml
+++ b/tests/no_std_basic_emulate/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ranging = { path = "../..", features = ["no_std"]}
+slicing = { path = "../..", features = ["no_std"]}
 any_std = { path = "../any_std" }
