Tests and features

--- a/tests/any_std/Cargo.toml
+++ b/tests/any_std/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+std = []
 no_std = []
+no_std_vec = []
 
 [dependencies]
 slicing = { path = "../.." }
