--- a/tests/slicing_no_std_basic_emulate/Cargo.toml
+++ b/tests/slicing_no_std_basic_emulate/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "ok_std"
+name = "no_std_basic_emulate"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slicing = { path = "../..", features = ["std"] }
-[dev-dependencies]
-any_std = { path = "../any_std" }
+slicing = { path = "../..", features = ["no_std"]}
+slicing_any_std = { path = "../slicing_any_std", features = ["no_std"] }
