--- a/tests/slicing_ok_st/Cargo.toml
+++ b/tests/slicing_ok_st/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "no_std_basic_emulate"
+name = "slicing_ok_std"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slicing = { path = "../..", features = ["no_std"]}
-any_std = { path = "../any_std" }
+slicing = { path = "../..", features = ["std"] }
+[dev-dependencies]
+slicing_any_std = { path = "../slicing_any_std" }
