--- a/test_crates/slicing_no_std_vec_compile/Cargo.toml
+++ b/test_crates/slicing_no_std_vec_compile/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 slicing = { path = "../..", features = ["no_std", "no_std_vec"]}
+slicing_any_std = { path = "../slicing_any_std", features = ["no_std", "no_std_vec"]}
 
 [profile.dev]
 panic = "abort"
