--- a/test_crates/slicing_no_std_vec_build/.cargo/config.toml
+++ b/test_crates/slicing_no_std_vec_build/.cargo/config.toml
@@ -2,9 +2,14 @@
 # Automatically select this target when `cargo build`.
 [build]
 # Building successfully (in the same order as at https://doc.rust-lang.org/nightly/rustc/platform-support.html#tier-2)
- target = "aarch64-unknown-none-softfloat"
+# target = "aarch64-unknown-none-softfloat"
 # target = "aarch64-unknown-none"
-# and possibly more
+# target = "riscv32i-unknown-none-elf"
+# target = "riscv32imac-unknown-none-elf"
+# target = "riscv32imc-unknown-none-elf"
+# target = "riscv64gc-unknown-none-elf"
+# target = "riscv64imac-unknown-none-elf"
+target = "x86_64-unknown-none"
 
 # Build fails (in the same order as at https://doc.rust-lang.org/nightly/rustc/platform-support.html#tier-2):
 # target = "armebv7r-none-eabi" # -> rust-lld: error: /home/pkehl/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/armebv7r-none-eabi/lib/libcore-f9e4d8557f4ba8db.rlib(core-f9e4d8557f4ba8db.core.7cf1b70b-cgu.0.rcgu.o):(.rodata.cst16): offset is outside the section
@@ -16,7 +21,11 @@
 
 # target = "thumbv7m-none-eabi" # -> undefined symbol: __aeabi_unwind_cpp_pr0
 # --- even though Cargo.toml specifies "abort"
+
 # target = "i586-pc-windows-msvc" # -> needs link.exe
+
 # target = "nvptx64-nvidia-cuda" # -> needs rust-ptx-linker; but then it fails: [... ERROR ptx_linker]   caused by: Undefined references: ["rust_oom"]
+
+# target = "thumbv8m.base-none-eabi" # -> undefined symbol: __aeabi_unwind_cpp_pr0
 
 # and possibly more
