with_heap! and related macros fixed.

--- a/test_crates/slicing_no_std_bare_run/Cargo.toml
+++ b/test_crates/slicing_no_std_bare_run/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "slicing_no_std_basic_build"
+name = "slicing_no_std_bare_run"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,3 @@ edition = "2021"
 [dependencies]
 slicing = { path = "../..", features = ["no_std"]}
 slicing_any_std = { path = "../slicing_any_std", features = ["no_std"] }
-
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
