--- a/test_crates/slicing_no_std_bare_build/Cargo.toml
+++ b/test_crates/slicing_no_std_bare_build/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 slicing = { path = "../..", features = ["no_std"]}
-slicing_any_std = { path = "../slicing_any_std", features = ["no_std"] }
+slicing_any_std_test = { path = "../slicing_any_std_test", features = ["no_std"] }
 
 [profile.dev]
 panic = "abort"
