--- a/test_crates/slicing_no_std_heap_test/Cargo.toml
+++ b/test_crates/slicing_no_std_heap_test/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "slicing_no_std_heap_run"
+name = "slicing_no_std_heap_test"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 slicing = { path = "../..", features = ["no_std", "no_std_vec"]}
-slicing_any_std = { path = "../slicing_any_std", features = ["no_std", "no_std_vec"] }
+slicing_any_std_test = { path = "../slicing_any_std_test", features = ["no_std", "no_std_vec"] }
